force-app/main/default/objects/Case/fields/AgreementQualityScore__c.field-meta.xml
<CustomField>
    <fullName>AgreementQualityScore__c</fullName>
    <label>Closing Quality Score</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>