force-app/main/default/objects/Case/fields/ClosingContentTrustStage__c.field-meta.xml
<CustomField>
    <fullName>ClosingContentTrustStage__c</fullName>
    <description>The stage in the Content Trust Pipeline this author was at when this interaction was closed.</description>
    <label>Closing Content Trust Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContentPipelineStages</valueSetName>
    </valueSet>
</CustomField>