force-app/main/default/objects/Case/fields/CoachingLevel__c.field-meta.xml
<CustomField>
    <fullName>CoachingLevel__c</fullName>
    <description>The coaching level field defines the coaching level at the interaction level for an Author. The coaching level value at the Author level is automatically copied to the Interaction upon creation.</description>
    <label>Coaching Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>