force-app/main/default/objects/Case/fields/OpeningContentTrustStage__c.field-meta.xml
<CustomField>
    <fullName>OpeningContentTrustStage__c</fullName>
    <description>The stage in the Content Trust Pipeline this author was at when this interaction was opened.</description>
    <label>Opening Content Trust Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContentPipelineStages</valueSetName>
    </valueSet>
</CustomField>