force-app/main/default/objects/Case/fields/TriggerQualityScore__c.field-meta.xml
<CustomField>
    <fullName>TriggerQualityScore__c</fullName>
    <label>Opening Quality Score</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>