force-app/main/default/objects/Case/recordTypes/CoachingInteraction.recordType-meta.xml
<RecordType>
    <fullName>CoachingInteraction</fullName>
    <active>true</active>
    <businessProcess>Coaching Process</businessProcess>
    <label>Content Trust Interaction</label>
</RecordType>