force-app/main/default/objects/Case/recordTypes/StandardCase.recordType-meta.xml
<RecordType>
    <fullName>StandardCase</fullName>
    <active>true</active>
    <businessProcess>Standard Process</businessProcess>
    <label>Standard Case</label>
</RecordType>